overlays/core/apps/kube-prometheus-stack/kube-prometheus-stack.yml
apiVersion: v1
kind: Namespace
metadata:
    name: kube-prometheus-stack
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
    name: prometheus-basic-auth-middleware
    namespace: kube-prometheus-stack
spec:
    basicAuth:
        secret: prometheus-basic-auth-secret
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: prometheus
    namespace: kube-prometheus-stack
    annotations:
        traefik.ingress.kubernetes.io/router.middlewares: kube-prometheus-stack-prometheus-basic-auth-middleware@kubernetescrd
        cert-manager.io/cluster-issuer: local-issuer
        cert-manager.io/common-name: prometheus.core.phorge
spec:
    ingressClassName: traefik-local
    tls:
        - hosts:
              - prometheus.core.phorge
          secretName: prometheus-tls
    rules:
        - host: prometheus.core.phorge
          http:
              paths:
                  - path: /api/v1/write
                    pathType: Exact
                    backend:
                        service:
                            name: kube-prometheus-stack-prometheus
                            port:
                                number: 9090
